@@ -1,3 +1,15 @@
+2009-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/maemo/main.py:
+	* python/mushin/maemo/show.py:
+	* python/mushin/maemo/things.py:
+	* python/mushin/maemo/start.py (added):
+	* python/mushin/maemo/lists.py (added):
+	* python/mushin/maemo/show.py (added):
+	  Add more windows.
+	* python/mushin/common/app.py (added):
+	  Add a Server object to handle interaction with database.
+
 2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/model/couch.py:
